--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<!A simple game where the player controls a square using their mouse and escapes from a chasing square>
-<!Version 1.3>
-<!Fabijus Sobolevas>
+<!--A simple game where the player controls a square using their mouse and escapes from a chasing square-->
+<!--Version 1.3-->
+<!--Fabijus Sobolevas-->
 
 <html>
    <head>
